--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 <body>
 <div class="main-content">
-    <div class="block block-1">bloque 1</div>
-    <div class="block block-2">bloque 2</div>
-    <div class="block block-3">bloque 3</div>
-    <div class="block block-4">bloque 4</div>
-    <div class="block block-5">bloque 5</div>
-    <div class="block block-6">bloque 6</div>
-    <div class="block block-7">bloque 7</div>
+    <div class="block block-1"><img src="img/img1.jpg" /></div>
+    <div class="block block-2"><img src="img/img2.jpg" /></div>
+    <div class="block block-3"><img src="img/img3.jpg" /></div>
+    <div class="block block-4"><img src="img/img4.jpg" />4</div>
+    <div class="block block-5"><img src="img/img5.jpg" /></div>
+    <div class="block block-6"><img src="img/img6.jpg" /></div>
+    <div class="block block-7"><img src="img/img7.jpg" /></div>
+    <div class="block block-8"><img src="img/img8.jpg" /></div>
 </div>
 </body>
 </html>
